# ut-tweak-tool

./: .bzrignore  CMakeLists.txt  README  TODO  clickable.json  copyright  manifest.json.in  ut-tweak-tool.apparmor  ut-tweak-tool.pro
app/: CMakeLists.txt  main.qml  ut-tweak-tool.desktop.in
app/components/: ToastWithAction.qml  TweakToolMainView.qml  TweakToolPage.qml
app/components/ListItems/: Page.qml  SectionDivider.qml
app/components/Models/: ClickModel.qml
app/scripts/: adb_on_lock_get  adb_on_lock_unset  writable_image_get
app/theme/: PageHeadStyle.qml  SectionButton.qml
app/ui/: AboutPage.qml  MainPage.qml
app/ui/aboutPage/: AboutCopyrightSection.qml  AboutCreditsSection.qml  AboutGeneralSection.qml
app/ui/mainPage/: ApplicationsTab.qml  BehaviourTab.qml  MainPageDefaultHeader.qml  OverviewTab.qml  SystemTab.qml
app/ui/mainPage/behaviourTab/: AppsScopeFavs.qml  Audio.qml  Unity8Mode.qml
app/ui/mainPage/systemTab/: AppsStats.qml  ImageWritable.qml  InstallClickFromLocal.qml
click/: CMakeLists.txt  manifest.json.in
cmake/: Click.cmake
data/: ut-tweak-tool.sverzegnassi.desktop.in.in
plugins/: CMakeLists.txt
plugins/QtPowerd/: CMakeLists.txt  QtPowerd.cpp  QtPowerd.h
plugins/click/: backend.h
plugins/sound/: CMakeLists.txt  qmldir
plugins/storagemanager/: storagemanager.h
plugins/tweaktool/: cmdlauncher.cpp  qmldir  singleprocess.cpp  singleprocess.h
po/: CMakeLists.txt  ca.po  de.po  es.po  fi.po  fr.po  gl.po  it.po  nb.po  nl.po  pl.po  ru.po  ug.po  ut-tweak-tool.sverzegnassi.pot  zh_CN.po
src/app/: CMakeLists.txt  config.h.in  main.cpp
src/app/qml/: main.qml
src/app/qml/aboutTab/: AboutPage.qml
src/app/qml/applicationsTab/: ApplicationPage.qml  ApplicationPageHooksTab.qml  ApplicationPageOverviewTab.qml  ApplicationsTab.qml
src/app/qml/behaviourTab/: AppsScopeFavs.qml  AppsScopeFavsAddFromInstalled.qml  BatteryIndicator.qml  BehaviourTab.qml  GestureTutorial.qml  Unity8EdgeSensitivity.qml  Unity8IndicatorMenu.qml  Unity8Indicators.qml  Unity8Launcher.qml  Unity8Mode.qml
src/app/qml/components/: Functions.js  ManifestParser.qml  Toast.qml  ToastWithAction.qml  TweakToolPage.qml
src/app/qml/components/Commands/: Reboot.qml
src/app/qml/components/Dialogs/: FileChooserDialog.qml
src/app/qml/components/ListItems/: AppLauncher.qml  Application.qml  Base.qml  Button.qml  Control.qml  OptionSelector.qml  Page.qml  SectionDivider.qml  SingleValue.qml  Warning.qml
src/app/qml/components/Models/: ApplicationsModel.qml  ClickModel.qml
src/app/qml/components/Upstream/: EmptyState.qml
src/app/qml/mainPage/: ApplicationsTab.qml  BehaviourTab.qml  MainPage.qml  OverviewTab.qml  SystemTab.qml
src/app/qml/mainPage/behaviourTab/: AppsScopeFavs.qml  GestureTutorial.qml  Unity8Mode.qml
src/app/qml/mainPage/systemTab/: AppsStats.qml  ImageWritable.qml  InstallClickFromLocal.qml  UninstallScopes.qml  UsbMode.qml
src/app/qml/scripts/: adb_on_lock_set  writable_image_set  writable_image_unset
src/app/qml/systemTab/: AppsStats.qml  BatteryInfo.qml  ClickInstall.qml  ImageWritable.qml  InstallClickFromLocal.qml  SystemInfo.qml  SystemTab.qml  UninstallScopes.qml  UsbMode.qml
src/app/qml/ui/: MainPage.qml
src/app/qml/ui/mainPage/: ApplicationsTab.qml  BehaviourTab.qml  MainPageDefaultHeader.qml  OverviewTab.qml  SystemTab.qml
src/app/qml/ui/mainPage/applicationsTab/: TerminalApp.qml
src/app/qml/ui/mainPage/behaviourTab/: AppsScopeFavs.qml  GestureTutorial.qml
src/app/qml/ui/mainPage/systemTab/: AppsStats.qml  InstallClickFromLocal.qml  UninstallScopes.qml  UsbMode.qml
src/plugin/: CMakeLists.txt
src/plugin/QtPowerd/: plugin.cpp  plugin.h  qmldir
src/plugin/click/: CMakeLists.txt  applicationsmodel.cpp  applicationsmodel.h  backend.cpp  qmldir
src/plugin/pamauthentication/: AuthenticationDialog.qml
src/plugin/storagemanager/: CMakeLists.txt  backend.cpp  qmldir  storagemanager.cpp
src/plugin/theme/: CMakeLists.txt  PageHeadStyle.qml
src/plugin/tweaktool/: CMakeLists.txt  applicationsmodel.cpp  applicationsmodel.h  backend.cpp  clickinstaller.cpp  cmdlauncher.h  desktopfileutils.cpp  devicecapabilities.h  package.cpp  package_p.h  packagesmodel.cpp  packagesmodel.h  singleprocess.h  systemfile.cpp  systemfile.h  systeminfo.cpp  systeminfo.h
ut-tweak-tool/: applicationsmodel.cpp  applicationsmodel.h  clickinstaller.h  desktopfileutils.cpp  desktopfileutils.h  devicecapabilities.cpp  main.cpp  package.cpp  scopehelper.cpp  scopehelper.h  ut-tweak-tool.desktop  ut-tweak-tool.pro  ut-tweak-tool.qrc
ut-tweak-tool/qrc/: main.qml
ut-tweak-tool/qrc/applicationsTab/: ApplicationPage.qml  ApplicationPageOverviewTab.qml
ut-tweak-tool/qrc/behaviourTab/: Unity8Indicators.qml
ut-tweak-tool/qrc/components/: FilePickerPage.qml
ut-tweak-tool/qrc/components/ListItems/: AppLauncher.qml  OptionSelector.qml  Warning.qml
ut-tweak-tool/qrc/pam/: AuthenticationService.qml
ut-tweak-tool/qrc/systemTab/: BatteryInfo.qml
